update torque and cleanup duplicate sections

--- a/html/Inspection/Insp_FUEL SYSTEM.html
+++ b/html/Inspection/Insp_FUEL SYSTEM.html
@@ -4,7 +4,7 @@
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">
       Inspect and clean the fuel-filter element in the firewall mounted fuel filter per
-      <xref sectionTarget="2.50.3" prependLabel="Section"></xref>
+      <xref sectionTarget="2.75.6" prependLabel="Section"></xref>
       and replace if necessary. If contamination is found, replace the filters (2) on the FCU pump.
       (Ref. SL229, SL229A, SL286)
     </td>
@@ -22,7 +22,7 @@
   <tr>
     <td class="cellInspectionNumber">FS4</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check fuel tank for leaks.</td>
+    <td class="cellInspectionText">Check fuel tanks (including header tank) for leaks.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">FS5</td>
@@ -70,7 +70,7 @@
     <td class="cellInspectionNumber">FS503</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Remove finger strainers (steel elbow) from fuel tank and clean. Inspect for fuel
-      contamination per Service Letter #148.</td>
+      contamination per Service Letter #148 and <xref sectionTarget="2.75.6" prependLabel="Section"></xref>.</td>
   </tr>
 
 </table>
