--- a/html/Maintenance/Brake Master-Cylinders.html
+++ b/html/Maintenance/Brake Master-Cylinders.html
@@ -5,7 +5,7 @@
     <figcaption class="centerText">Brake Master-Cylinders</figcaption>
 </figure>
 
-<p>The lower end of the master cylinder is attached to a Parker clevis with a Parker check nut. If the rudder pedal position (angle) should need changing for pilot comfort, the check nut can be loosened, and the Clevis immediately below can be rotated with finger pressure in either direction to increase or decrease the angle that the brake pedal makes with the cockpit floor. When desired angle is obtained, snug check nut. To remove the master cylinder, loosen check nut and rotate plunger out of the clevis. Then removing the bolt attaching the master cylinder to the steel plates and disconnect the two brake lines at the cylinder. </p>
+<p>The lower end of the master cylinder is attached to a Parker clevis with a Parker check nut. If the rudder pedal position (angle) should need changing for pilot comfort, the check nut can be loosened, and the Clevis immediately below can be rotated with finger pressure in either direction to increase or decrease the angle that the brake pedal makes with the cockpit floor. When desired angle is obtained, torque check nut to 50-60 in-lb. To remove the master cylinder, loosen check nut and rotate plunger out of the clevis. Then removing the bolt attaching the master cylinder to the steel plates and disconnect the two brake lines at the cylinder. </p>
 
 <p>There have had reports from two Air Tractor owners that the eyebolt that screws into the brake master cylinder broke in the threads, causing immediate loss of braking on the affected side. This issue could result in losing directional control of the aircraft during taxi, takeoff or landing. This issue affected serial numbers -0001 through -0064.
 </p>
