--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -1,6 +1,7 @@
+<p><b>Finger Strainers</b></p>
 <p>
     Each wing tank has a finger strainer soldered to the 90° elbow at the tank outlet. This screen should be removed and
-    cleaned at least once a year during the 12-month inspection.
+    cleaned at least once a year during the 12-month inspection as shown in <xref sectionTarget="3.1.4" prependLabel="Section"></xref>.
 </p>
 
 <p>
@@ -12,8 +13,7 @@
         De-fuel both wing tanks by use of the valve outlet in the header tank.
     </li>
     <li>
-        Remove the hose-end fitting from the elbow fitting that enters the fuel cell through the inboard rib of the
-        wing.
+        Remove the hose-end fitting from the elbow fitting that enters the wing fuel tank fuel.
     </li>
     <li>
         Remove the elbow fitting from the tank. The strainer screen is part of the elbow fitting.
@@ -26,25 +26,68 @@
     pipe-thread sealer.
 </p>
 
+<p><b>Firewall Fuel Filter</b></p>
 <p>
     The firewall fuel filter is shown in <xref fileTarget="img_FirewallFuelFilter.png" xrefType="link">Cross Reference
-        Placeholder</xref>. This fuel filter may be an Air Tractor p/n 53562-1, 53114-2, or a Fram FS1133-PLM fuel
-    filter. These fuel filters use the Air Tractor p/n 52351-1 fuel filter element. Inspection and maintenance
-    procedures for the fuel filters are almost identical. The filter should be cleaned and inspected for general
-    condition every 100 hours TIS. The procedure below is a comprehensive procedure that specifies where each filter is
-    different from the others. The maintenance and inspections below were previously included in Service letters SL229
-    and SL229A.
+        Placeholder</xref>. 
 </p>
+
 
 <figure>
     <img class="imageCentered_4x4" src="img/img_FirewallFuelFilter.png">
     <figcaption class="centerText">Firewall Fuel Filter</figcaption>
 </figure>
 
+
 <p>
-    The Air Tractor p/n 52351-1 fuel filter element should be cleaned and inspected for general condition every 100
-    hours TIS as follows:
+    There have been multiple filter assemblies and elements (cartridges) used on AT-802's.  These are shown below.
+    
+    <!--This fuel filter may be an Air Tractor p/n 53562-1, 53114-2, or a Fram FS1133-PLM fuel
+    filter. These fuel filters use the Air Tractor p/n 52351-1 fuel filter element. Inspection and maintenance
+    procedures for the fuel filters are almost identical. -->
 </p>
+<table class="plainTableMedium">
+    <tr>
+        <th class="plainTableHeaderCell">Filter Assembly</th>
+        <th class="plainTableHeaderCell">Filter Element (Cartridge)</th>
+        <th class="plainTableHeaderCell">Notes</th>
+    </tr>
+    <tr>
+        <td  class="plainTableNormalCell">53562-1</td>
+        <td  class="plainTableNormalCell">52351-1</td>
+        <td  class="plainTableNormalCell">Filter cap uses o-ring style fittings for better fitment.  Standard on new airplanes after SN 1200.</td>
+    </tr>
+    <tr>
+        <td  class="plainTableNormalCell">53114-1</td>
+        <td  class="plainTableNormalCell">52351-1</td>
+        <td  class="plainTableNormalCell">Filter cap uses NPT fittings.</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">Fram FS1133-PLM</td>
+        <td class="plainTableNormalCell">52351-1 or Fram CS1133PL</td>
+        <td class="plainTableNormalCell"></td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">53120-1</td>
+        <td class="plainTableNormalCell">Falls Filtration Technologies 03W062536</td>
+        <td class="plainTableNormalCell"></td>
+    </tr>
+</table>
+
+
+
+<p>
+    The filter should be cleaned and inspected for general
+    condition every 100 hours TIS as recommended in <xref sectionTarget="3.1.4" prependLabel="Section"></xref>
+    and in accordance with the procedure below.
+</p>
+<p>
+    Within the procedure, specific instructions are provided where each filter is
+    different from the others. The information below was previously provided in Service letters SL229
+    and SL229A.
+</p>
+
+
 
 <ol>
     <li>
@@ -90,7 +133,7 @@
             </li>
             <li>
                 Inspect element for evidence of crushing damage. Measure length of filter with a tape or ruler. The
-                length from metal surface to metal surface shall be 4 1/2 inches 1/16 inches.
+                length from metal surface to metal surface shall be 4 1/2 inches ± 1/16 inches.
             </li>
             <li>
                 Any filter element that does not satisfactorily meet the condition inspection above should be discarded
@@ -99,7 +142,7 @@
         </ol>
     </li>
     <li>
-        Reassemble and install fuel filter assembly with new seal beneath cap (Fram p/n SP238629).
+        Reassemble and install fuel filter assembly with new seal beneath cap (Fram p/n SP238629 or 53122-1).
     </li>
     <li>
         Replace crush washer (Ref. SL361) and torque center bolt on top of fuel filter assembly to 12 - 14 ft.lbs. (144 - 168 in.lbs.).
@@ -115,7 +158,9 @@
 <p>
     When the fuel filter bowl has been removed for cartridge inspection it must be remembered that the fuel lines from
     the engine fuel control to the header tank have been drained, and these lines will be air-locked if a start is
-    attempted without first priming the lines with fuel. Use the electric boost pump for this.
+    attempted without first priming the lines with fuel. If equipped with a CECO electric boost pump, the boost pump can be
+    used to prime the fuel lines.  Otherwise, motor the engine for approximately 10 seconds so the FCU and engine driven fuel
+    pumps can prime the fuel lines.
 </p>
 
 <p>
