--- a/html/Maintenance/TORQUE VALUES AND GUIDANCE FOR BOLT INSTALLATION.html
+++ b/html/Maintenance/TORQUE VALUES AND GUIDANCE FOR BOLT INSTALLATION.html
@@ -144,4 +144,5 @@
         applied to the bolt (holding the nut stationary), use the upper value. </li>
     <li>Tension type nuts are AN310, AN315, AN363, AN365, MS17825, MS20365, MS21042, MS21044, MS21045, MS2104 6. </li>
     <li>Shear type nuts are AN316, AN320, AN364, MS20364, MS21083, NAS509, NAS1423. </li>
+    <li>Unless otherwise specified, use the shear nut torque for check nuts.</li>
 </ol>
