--- a/html/Inspection/Insp_FLAPS.html
+++ b/html/Inspection/Insp_FLAPS.html
@@ -19,8 +19,7 @@
   <tr>
     <td class="cellInspectionNumber">F4</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Cycle flaps and listen for unusual rubbing noises. Check that flaps do not exceed
-      marking in down position.</td>
+    <td class="cellInspectionText">Remove fuselage side skins, cycle flaps and verify there are no interferences while listening for unusual rubbing noises. Verify travel limits.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">F5</td>
