--- a/html/Limitations/RevisionHistory.html
+++ b/html/Limitations/RevisionHistory.html
@@ -37,7 +37,13 @@
     </tr>
         <tr>
         <td class="plainTableNormalCell">12/12/24</td>
-        <td class="plainTableNormalCell">Updated Regulation Reference</td>
+        <td class="plainTableNormalCell">Update Regulation Reference</td>
+        <td class="plainTableNormalCell">John Robert Turner</td>
+    </tr>
+    </tr>
+        <tr>
+        <td class="plainTableNormalCell">9/1/25</td>
+        <td class="plainTableNormalCell">Reformatted, No Limitation Changes</td>
         <td class="plainTableNormalCell"></td>
     </tr>
 </table>
