--- a/html/Maintenance/Air Filters.html
+++ b/html/Maintenance/Air Filters.html
@@ -6,7 +6,7 @@
 
 <p>For aircraft with the Brackett BA-413E foam Ram Air filter, removal of the filter element is accomplished by removing the lower and side engine cowls and the lower engine plenum cover.  Remove the center filter support rods by removing the screw on the forward end and sliding them out of their retaining brackets at the aft end.  Remove the old filter element and replace with a new one, ensuring that the filter element completely fills the stainless steel frame, especially in the corners.  Replace the filter support rods, plenum cover, and cowl skins in reverse order of removal.  This filter should not be cleaned, as this may remove the wettant and decrease the filtering ability of the foam.  Any excess dirt or debris that has accumulated on the forward face of the filter may be brushed off with a bristle brush, like a paintbrush, and vacuumed out of the plenum.  The Brackett air filter has a maximum recommended service life of 12 calendar months, regardless of the actual flight time.  The reason is to ensure that acceptable levels of wettant remain in the filter to adequately capture dust and debris. </p>
 
-<p>For aircraft equipped with the 53474-1 XFlow Air filter, see </p>
+<p>For aircraft equipped with the 53474-1 XFlow Air filter, see <xref sectionTarget="2.50.50" prependLabel="Section"></xref>.</p>
 
 <p>Operators wishing to retrofit the Donaldson P609713 pleated filter element to an aircraft that is currently equipped with the Brackett BA-413E foam filter element should refer to Service Letter #348 for further instructions.</p>
 
