--- a/html/Maintenance/Ferry Fuel System.html
+++ b/html/Maintenance/Ferry Fuel System.html
@@ -1,7 +1,7 @@
 <p>
     The ferry fuel system utilizes the hopper as a temporary fuel tank (see <xref fileTarget="img_Fig_22.png" xrefType="link">Fig
         Cross Reference</xref>) and is not an FAA Certificated fuel system. However, it may be installed for use during ferry flights provided a
-    logbook entry is made for both the installation and removal.
+    logbook entry is made for the installation and a ferry permit is granted by your airworthiness authority.  When returning to the certificated configuration, a logbook entry must be made for removal.
 </p>
 
 <p>
@@ -91,23 +91,23 @@
         </figure>
     </li>
     <li>
-        If desired, or required, install hopper lid fuel cap by cutting a 3.5 inch hole in the hopper lid and installing 416-3B-2 Adapter and 416-50 cap.  Install the fuel cap by using the adapter as a guide to drill .257 holes through the hopper top.  Install with 12 AN4C6A bolts, AN960C4 washers and MS21044C4 nuts.  Install 416-50 retention chain between filler cap and bolt as shown.  Seal all around inside of cap with PR-1422 sealant.
+        If desired, or required, install hopper lid fuel cap by cutting a 3.5 inch hole in the hopper lid and installing 416-3B-2 Adapter and 416-50 cap.  Install the fuel cap by using the adapter as a guide to drill .257 holes through the hopper top.  Install with 12 AN4C6A bolts, AN960C4 washers and MS21044C4 nuts.  Install 416-50 retention chain between filler cap and bolt as shown.  Seal all around inside of cap with fuel tank sealant.
         <figure>
             <img class="imageCentered_6x6" src="img/img_FerryFuelCap.png">
             <figcaption class="centerText">Fuel Cap Installation</figcaption>
         </figure>  
     </li>
     <li>
-        Coat all of the 80158 vent hoses and attaching clamps that are located inside the hopper with PR-1422 sealant to prevent fuel from getting to the hoses. 
+        Coat all of the 80158 vent hoses and attaching clamps that are located inside the hopper with fuel tank sealant to prevent fuel from getting to the hoses. 
     </li>
     <li>
-        Seal hopper lid with PR-1422 sealant.
+        Seal hopper lid with fuel tank sealant.
     </li>
     <li>
         Allow all sealant to cure for at least 12 hours before flight.
     </li>
     <li>
-        Test by filling hopper full and check for leaks. 30-45 minutes.
+        Test by filling hopper full and check for leaks after 30-45 minutes.
     </li>
     <li>
         Make a logbook entry stating that the ferry fuel system has been installed as a "TEMPORARY INSTALLATION FOR
