--- a/html/Maintenance/Flap Actuator Removal Instructions.html
+++ b/html/Maintenance/Flap Actuator Removal Instructions.html
@@ -11,7 +11,7 @@
 
 
     <li>Remove the AN4 bolts that attach the aluminum arms on the flap Tee to the torque tube.</li>
-    <li>Check rubber coupling on motor shaft for excessive backlash. (Commercial A/C Actuator only) </li>
+    <li>Check rubber coupling on motor shaft for excessive backlash.</li>
 </ol>
 <p>With the complete actuator on the workbench, if it is desired to change the actuator itself, perform the following:
 </p>
