--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -46,7 +46,7 @@
     filter. These fuel filters use the Air Tractor p/n 52351-1 fuel filter element. Inspection and maintenance
     procedures for the fuel filters are almost identical. -->
 </p>
-<table class="plainTableMedium">
+<table class="plainTableLarge">
     <tr>
         <th class="plainTableHeaderCell">Filter Assembly</th>
         <th class="plainTableHeaderCell">Filter Element (Cartridge)</th>
