--- a/html/Maintenance/Fuselage Frame.html
+++ b/html/Maintenance/Fuselage Frame.html
@@ -1,4 +1,4 @@
-<p>The fuselage frame is made of 4130N tubing. It may be repaired in conventional ways. AC-4313.1A may be used as a guide for repairs to tubing. All fittings are also of 4130N material. The repaired area should be sanded and burned paint should be removed to a point where it can be feather-edged by sanding. A good etching solution would be a mixture of 1/2 fluid oz. of concentrated phosphoric acid in one gallon of isopropanol (isopropyl alcohol). If relative humidity is extremely low, add 1/4 cup of distilled water to the solution. Factory finish is R9006 Air Ag Yellow Epoxy with R3203 converter. See <xref sectionTarget="2.105.3" prependLabel="Section"></xref> for complete repainting instructions. </p>
+<p>The fuselage frame is made of 4130N tubing. It may be repaired in conventional ways. AC-43.13 may be used as a guide for repairs to tubing. All fittings are also of 4130N material. The repaired area should be sanded and burned paint should be removed to a point where it can be feather-edged by sanding. A good etching solution would be a mixture of 1/2 fluid oz. of concentrated phosphoric acid in one gallon of isopropanol (isopropyl alcohol). If relative humidity is extremely low, add 1/4 cup of distilled water to the solution. Factory finish is either R9006 Air Ag Yellow Epoxy with R3203 converter or gray epoxy primer (Contact Air Tractor Customer Service for specific materials). See <xref sectionTarget="2.105.3" prependLabel="Section"></xref> for complete repainting instructions. </p>
 
 <p>If your aircraft does not already have an overturn skid plate installed, it is highly recommended to install one using the information located in Service Letter #97.</p>
 
@@ -7,9 +7,7 @@
     and engaged in full-time firefighting are exempt), there have been reports of cracks or failures of the upper
     longeron on the left hand side of the fuselage frame just forward of the stabilizer front spar attach fitting. We
     believe that these cracks or failures are associated with high vertical loads during repeated hard turns.
-</p>
-
-<p>For more information regarding inspections and repairs, refer to Service Letter #195, Service Letter #217A and
+    For more information regarding inspections and repairs, refer to Service Letter #195, Service Letter #217A and
     Service Letter #217B.</p>
 
 <p>If your aircraft is part of the -0001 through -0037 serial number range, there have been two repairs on two AT-802A's
@@ -29,7 +27,6 @@
     In both instances the operator of the aircraft reported violent tail wheel shimmy before the failure was discovered.
     A tail wheel that shimmies can produce high side loads in the fuselage structure especially if the shimmy couples
     with the natural frequency in torsion of the aft fuselage structure.
+    If your aircraft has encountered violent shimmy it is recommended that an immediate inspection be made of the aft
+    fuselage structure in the bay previously described.
 </p>
-
-<p>If your aircraft has encountered violent shimmy it is recommended that an immediate inspection be made of the aft
-    fuselage structure in the bay previously described.</p>
