--- a/html/Maintenance/MAIN AND TAIL GEAR ATTACH BOLTS.html
+++ b/html/Maintenance/MAIN AND TAIL GEAR ATTACH BOLTS.html
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-    We have established what we feel is a conservative, yet realistic time period for gear bolt changes, based on field
-    experience at this time. The bolt life shown is based on normal operations. If you discover slack in the large 1
+    Air Tractor has established conservative, yet realistic time periods for gear bolt changes, based on field
+    experience. The bolt life shown is based on normal operations. If you discover slack in the large 1
     1/8" bolt attaching the main gear leg, change it immediately.
 </p>
 
