--- a/html/Maintenance/Tail Wheel.html
+++ b/html/Maintenance/Tail Wheel.html
@@ -18,7 +18,7 @@
 </figure>
 
 
-<p>The Air Tractor tail wheel bearings are Timken 13889 cone (the part with the rollers) and 13836CP cup (the part pressed into the wheel half). Hand pack the bearings with grease, MIL-G-81322, and install wheel on the axle. Install the 40139-1 jam nut and 40138-1 tongue washer on the axle with the round shoulder inboard and tighten until all bearing slack is removed but the wheel is free to turn. Inflate the tire to 60 psi. Grease the axle bolt and install wheel and axle assembly on the fork. Torque the nut to 550 inch-pounds. Safety the jam nut against the rotation of the wheel with MS20995C32 stainless safety wire.</p>
+<p>The Air Tractor tail wheel bearings are Timken 19150 cone (the part with the rollers) and 19283 cup (the part pressed into the wheel half). Hand pack the bearings with grease, MIL-G-81322, and install wheel on the axle. Install the 40139-1 jam nut and 40138-1 tongue washer on the axle with the round shoulder inboard and tighten until all bearing slack is removed but the wheel is free to turn. Inflate the tire to 60 psi. Grease the axle bolt and install wheel and axle assembly on the fork. Torque the nut to 550 inch-pounds. Safety the jam nut against the rotation of the wheel with MS20995C32 stainless safety wire.</p>
 <p>The 40260-1 tail wheel uses the 40134-5 axle. A grease fitting is installed in the axle that allows for purge lubrication of the tail wheel bearings. </p>
 <p>Refer to Air Tractor Manual 03-0169 for maintenance and repair of the 40260-1 tail wheel.</p>
 
