--- a/html/Inspection/Insp_OIL SYSTEM.html
+++ b/html/Inspection/Insp_OIL SYSTEM.html
@@ -30,7 +30,7 @@
   <tr>
     <td class="cellInspectionNumber">OS102</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Remove and clean chip detector.</td>
+    <td class="cellInspectionText">Remove and clean chip detectors.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">OS103</td>
