--- a/html/Maintenance/Altimeter - Static System.html
+++ b/html/Maintenance/Altimeter - Static System.html
@@ -1,7 +1,6 @@
 <p>
-    The static port on the AT-802 is contained within the wing-mounted pitot head. The static system on this airplane can
-    be drained by opening the static line inside the leading edge of the wing. Alternatively, the line can be blown out
-    with compressed air. In this case, the static line is accessible beneath the right-hand fuselage skin that attaches
+    The static port on the AT-802 is contained within the wing-mounted pitot head while the static ports on AT-802A are located in the aft section of the fuselage. For AT-802s the static system on this airplane can
+    be drained by opening the static line inside the leading edge of the wing.  For AT-802As, the static line is accessible beneath the right-hand fuselage skin that attaches
     to the top of the hopper tank.
 </p>
 
@@ -12,9 +11,7 @@
 </div>
 
 <p>
-    The static ports on the AT-802A are the low points of the system and are normally self-draining. There are “T"
-    fittings on the rear face of the static port buttons. The downward-facing arm of the “T" fittings are plugged. These
-    plugs must be removed to drain residual moisture in the static-system lines.
+    The static ports on the AT-802A are the low points of the system and are normally self-draining but there are plugged  “T" fittings on the rear face of the static port buttons in the aft fuselage. These plugs can be removed to drain residual moisture in the static-system lines.
 </p>
 
 <p><b>Pitot/Static Calibration </b></p>
@@ -22,7 +19,7 @@
 <p>
     Using Pitot Static tester attach positive pressure line to pitot tube and negative pressure line to static port.
     Pitot
-    tube on the AT-802A is under the left hand wing. For the two seater AT-802-2, the pitot and static probe is in the
+    tube on the AT-802A is under the left hand wing. For the two seater AT-802-2, the pitot and static probes are both in the boom installed on the
     leading edge of the left hand wing.
     The probe on the AT-802-2 will require an adapter to connect vacuum port. 
     To maintain compliance with part 91.411,
