--- a/html/Maintenance/Canopy Doors.html
+++ b/html/Maintenance/Canopy Doors.html
@@ -2,13 +2,13 @@
 
 <p>The door frame has a slight inward bow of 1/8" to allow for door deflection outward at high speeds. The low pressure around the canopy causes the doors to bow outward. The door latch should provide a snug door fit, and if it does not, and the weather-strip is in good condition, bend the latch arm that rides on the plated striker plate (p/n 10354-1 (L/H) or -2 (R/H)). </p>
 
-<p>The door glass is attached with 1/16 x 1 1/4 felt with PSA backing (p/n F-7) around the perimeter. The machine screws around the glass are AN526-632-8 and the nuts are AN365-632. Be careful not to over-tighten the screws or the glass will crack. </p>
+<p>The door plexiglass is attached with 1/16 x 1 1/4 felt with PSA backing (p/n F-7) around the perimeter. The machine screws around the glass are AN526-632-8 and the nuts are AN365-632. Be careful not to over-tighten the screws or the glass will crack. </p>
 
 <p>All AT-802s have emergency door releases on the left-hand door. These doors can be removed by supporting the open door and removing the spring-pins. </p>
 
 <p>Beginning with aircraft manufactured in the year 2000, an improved emergency door release system was introduced on production aircraft and offered for retrofit installation on existing aircraft. This system has rigid links and affords the pilot or rescuer greater mechanical advantage when activating the emergency door release. This system has shown excellent service history since it was first installed, and Air Tractor would like to remind all operators of older aircraft that this system is available for retrofit installation. This system was designed to be easily retrofitted into all Air Tractor models. </p>
 
-<p>We encourage all operators to upgrade their doors with this improved emergency door release system if you haven’t already done so. We recommend installing this system on each cockpit door and we strongly recommend installing this system if your aircraft does not currently have any emergency door release.
+<p>We encourage all operators to upgrade their doors with this improved emergency door release system if you haven't already done so. We recommend installing this system on each cockpit door and we strongly recommend installing this system if your aircraft does not currently have any emergency door release.
 </p>
 
 <p>For specific directions, refer to Service Letter #191.</p>
@@ -17,9 +17,8 @@
 
 <p>There has also been at least one instance where the door release spring has worn through its attach hole in the 11875-1 bracket. The material for the bracket has been changed from 2024-T3 aluminum to 4130N steel in late 2013 to increase its strength and durability. The bracket has also been lengthened to provide additional edge distance around the spring attach hole. Refer to Service Letter #316 for directions to install this improvement.</p>
 
-<p>Owners of serial numbers -0001 through -0037 should be aware of a new cockpit door hinge assemblies that will improve the operation of the cockpit door emergency release cable. These new assemblies are more fully described in Service Letter #153.</p>
 
-<p>The right-hand canopy door may be removed by following these steps: </p>
+<p>For aircraft without an emergency release on the right-hand door, the right-hand door may be removed by following these steps: </p>
 
 <ol type="1">
     <li>Close and lock the canopy door.</li>
@@ -27,13 +26,12 @@
     <li>Open the door and support it while removing the AN3 hinge bolts. </li>
     <li>Remove the door from the airplane.</li>
 </ol>
+<p>The door may be replaced by reversing the order of the steps above. </p>
 
-<p>An alternate handle is installed at the factory in conjunction with radio equipment which could otherwise cause an interference problem with operation of the standard handle as it rotates forward toward the stop. This alternate handle has a separate latch arm and slimmer profile to accommodate radio installations installed in the forward corners of the cockpit.</p>
 
-<p>This alternate handle is available to facilitate radio installations made in the field as well. Be aware of the requirement to be able to use the cockpit door emergency release handle and inspect any installations made to ensure the handle can operate through its full range of motion.</p>
+<p>An alternate handle is installed at the factory in conjunction with radio equipment which could otherwise cause an interference problem with operation of the standard handle as it rotates forward toward the stop. This alternate handle has a separate latch arm and slimmer profile to accommodate radio installations installed in the forward corners of the cockpit.  This alternate handle is available to facilitate radio installations made in the field as well. Be aware of the requirement to be able to use the cockpit door emergency release handle and inspect any installations made to ensure the handle can operate through its full range of motion.  Refer to Service Letter #323 for more information on the installation of the alternate handle.</p>
 
-<p>Refer to Service Letter #323 for more information on the installation of the alternate handle.</p>
-
+<!--MAKE THIS INTO A CAUTION-->
 <p>Cable ties or any tying method should never be used to secure a cockpit door closed in flight. Tying door handles closed will add steps to normal operation of the door handle and may hinder the operation of the emergency door release which would be a safety issue during an emergency. Modifications to the door latch system should be removed.</p>
 
-<p>The door may be replaced by reversing the order of the steps above. </p>
+
