--- a/html/Maintenance/Corrosion Inspection.html
+++ b/html/Maintenance/Corrosion Inspection.html
@@ -1,31 +1,54 @@
-<p>Corrosion has been found in the area between and around the lower spar cap and splice block junction. Severe corrosion has also been found in several places along the spar caps including extreme corrosion in the vicinity of the aileron push-rod at the aileron. If corrosion is expected, the following steps should be taken:</p>
+<p>
+    Corrosion is common problem for Air Tractor aircraft due to the environments in which they are operated.
+    Inspecting for, and removing / fixing corrosion issues as soon as possible will likely save significant 
+    repair costs in the future.  The entire aircraft should be inspected for corrosion regularly, in particular, the following procedure should be performed every 12 months (at a minimum).
+</p>
+<p>
+    Inspecting for corrosion is important for all aircraft, not just agricultural aircraft.  Firefighting aircraft have experienced significant corrosion issues, especially when operated in a salt water environment.
+</p>
+<p><b>Inspection Procedure</b></p>
 
 <ol type="1">
-    <li>Inspect Wing Spar Caps</li>
-        <p>- Remove inspection plates that are on the lower side of the wing leading edge skin. </p>
-            <p>-Visually inspect spar caps with a flashlight and mirror for signs of corrosion.</p>
-    <figure>
-        <img class="imageCentered_4x3" src="img/img_Fig_SL1.png">
-        <figcaption class="centerText">Wing Spar Caps</figcaption>
-    </figure>
-    <li>Splice new tubes to replace severely corroded tubes.</li>
-    <figure>
-        <img class="imageCentered_4x3" src="img/img_Fig_SL2.png">
-        <figcaption class="centerText">Corroded Tubes</figcaption>
-    </figure>
-    <li>Inspect tubular support brace inside of the stabilizer.</li>
-        <p>- Inspect at 100-hour intervals on older AT’s.</p>
+    <li>Inspect Wing Spar Caps
+        <ol type="A">
+            <li>Remove inspection plates that are on the lower side of the wing leading edge skin.</li>
+            <li>Visually inspect spar caps with a flashlight and mirror for signs of corrosion.</li>
+        </ol>
+        <figure>
+            <img class="imageCentered_4x3" src="img/img_Fig_SL1.png">
+            <figcaption class="centerText">Wing Spar Caps</figcaption>
+        </figure>
+    </li>
+
+
+
+    <li>Inspect fuselage frame tubes and replace severely corroded tubes.
+        <figure>
+            <img class="imageCentered_4x3" src="img/img_Fig_SL2.png">
+            <figcaption class="centerText">Corroded Tubes</figcaption>
+        </figure>
+    </li>
+
+    <li>Inspect tubular support brace inside of the stabilizer.  
         <figure>
             <img class="imageCentered_4x3" src="img/img_Fig_SL3.png">
             <figcaption class="centerText">Tubular Support Brace</figcaption>
         </figure>
-        <li>Inspect all areas of the engine mount at each annual inspection.</li>
-        <li>Inspect firefighting aircraft annually for corrosion. </li>
-        <li>Wash firefighting aircraft thoroughly and regularly.</li>
+    </li>
+
+
+    <li>Inspect all areas of the engine mount.</li>
+
+
+    <li>Inspect landing gear external components.
         <figure>
             <img class="imageCentered_4x4" src="img/img_Fig_SL4.png">
-            <figcaption class="centerText">Firefighting Aircraft Corrosion</figcaption>
+            <figcaption class="centerText">Firefighting Aircraft Landing Gear Corrosion</figcaption>
         </figure>
-    </ol>
+    </li>
 
-    <p>For the above cases and other corrosion occurrences, follow the inspection and corrosion removal guidelines found in FAA Advisory Circular 43.13-1B chapter 6. In some instances, it may be possible to remove minor corrosion in the field. If corrosion is found, please contact your dealer who will communicate your information to the Air Tractor service department.</p>
+</ol>
+
+<p>
+    For the above cases and other corrosion occurrences, follow the inspection and corrosion removal guidelines found in FAA Advisory Circular 43.13-1B chapter 6. In some instances, it may be possible to remove minor corrosion in the field. If corrosion is found, please contact your dealer who will communicate your information to the Air Tractor service department.
+</p>
