--- a/html/Maintenance/Engine Build Up.html
+++ b/html/Maintenance/Engine Build Up.html
@@ -71,11 +71,11 @@
     <li>Install air conditioner drive pad assembly on engine AGB drive (Pad 5) with blank drive pad cover over lower
         mount pad (Pad 6). If AGB gear shaft is a dry (or misting lube) drive, lubricate drive spline and completely
         fill gear shaft cavity with molydisulfide grease. If AGB gear shaft is a sealed wet spline as evidenced by an
-        O-ring of the air conditioning drive spline and hollow AGB gear shaft, no lubrication is required (except the
+        O-ring on the air conditioning drive spline and hollow AGB gear shaft, no lubrication is required (except the
         O-ring). Torque mounting bolts to 50 in-lbs and safety wire. </li>
     <li>Install FCU lever input arm on engine-cam box at marked location with the FCU control linkage at the track point
         on the cam. Torque nut 100 to 120 in-lbs. </li>
     <li>Install fuel flow transducer by removing inline adaptor fitting and installing transducer in place of adaptor.
-        Note “K" factor printed on transducer. </li>
+       Verify that the fuel flow gauge "K" factor matches the fuel flow transducer "K" factor.</li>
 
 </ol>
