--- a/html/Maintenance/Engine Instruments.html
+++ b/html/Maintenance/Engine Instruments.html
@@ -4,9 +4,8 @@
 
 <p>Beginning in the second half of 2014, Air Tractor began installation of a differential pressure torquemeter. The previous torquemeters ran off of a single oil pressure line from the torque pressure port “AD” on the engine propeller reduction gearbox (RGB). This port provided pressure from the torque piston within the RGB. The single port torquemeter displayed the engine torque corresponding to the difference between the torque piston pressure and atmospheric pressure.</p>
 
-<p>The differential pressure/dual port torquemeters reference an additional oil pressure line from the RGB, port “AC” instead of atmospheric pressure. This pressure is the internal pressure of the gearbox. The torquemeter indicates the difference in pressures from the high pressure port “AD” and the low pressure port “AC” for increased indication accuracy.</p>
+<p>The differential pressure/dual port torquemeters reference an additional oil pressure line from the RGB, port “AC” instead of atmospheric pressure. This pressure is the internal pressure of the gearbox. The torquemeter indicates the difference in pressures from the high pressure port “AD” and the low pressure port “AC” for increased indication accuracy.  Refer to Service Letter #328 for additional information.</p>
 
-<p>Refer to Service Letter #328 for additional information.</p>
 
 <p>There have been a few reports of the face of the torque indicator filling with engine oil on turbine powered aircraft incorporating a “dual wet line” torque indicating system.</p>
 
