add flap pushrod end to limited items

--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -81,4 +81,10 @@
         <td class="plainTableNormalCell">15 Cleaning and Oiling Cycles</td>
         <td class="plainTableNormalCell">OM Supplement 04-0167, <xref sectionTarget="2.50.50" prependLabel="Section">Cross Reference Placeholder</xref></td>
     </tr>
+    <tr>
+        <td class="plainTableNormalCell">RE4F6-2</td>
+        <td class="plainTableNormalCell">Flap Pushrod Rod End Bearing</td>
+        <td class="plainTableNormalCell">1000 Hours</td>
+        <td class="plainTableNormalCell"></td>
+    </tr>
 </table>
