--- a/html/Maintenance/Rudder Removal and Replacement.html
+++ b/html/Maintenance/Rudder Removal and Replacement.html
@@ -24,9 +24,9 @@
         locks or a Delphi automotive-style connector. For airplanes made prior to 2025 with the Delphi connector, it is
         likely that you will need to de-pin the connector. Remove fuselage skin panels as needed to gain access to
         wiring connections.
-        <div class="boxCautionSmall">
-            <p class="boxCautionSmallHeader">CAUTION</p>
-            <p class="boxCautionSmallText">
+        <div class="boxCautionMedium">
+            <p class="boxCautionMediumHeader">CAUTION</p>
+            <p class="boxCautionMediumText">
                 Be especially aware of risk of pinching
                 fingers, hands or arms during the following steps.
             </p>
