lubrication updates on final review

--- a/html/Lubrication/100 Hour.html
+++ b/html/Lubrication/100 Hour.html
@@ -18,15 +18,6 @@
     </li>
 </ol>
 
-<p class="dontBreakAfter"><b>Use MIL-G-18322C Wheel Bearing Grease</b></p>
-
-<ol type="1">
-    <li>Remove tail wheel axle bolt, axle, disassembled tail wheel parts and clean and hand-pack
-        tail wheel bearings.</li>
-    <li>Remove and pack main wheel bearings.</li>
-</ol>
-
-
 <p class="dontBreakAfter"><b>Use General Purpose Oil</b></p>
 
 <ol>
@@ -46,7 +37,7 @@
     <li>Latch cams on fuel filter caps.</li>
     <li>Micro-switch rollers on arms.</li>
     <li>Bronze bushings in rudder pedal to master cylinder strap attach.</li>
-    <li>If aircraft is equipped with air conditioning system with engine driven compressor, remove
+    <li>If aircraft is equipped with air conditioning system with engine driven compressor, and an oil bath drive pad assembly, remove
         oil-level plug in side of drive pad assembly and check oil level. Service with turbine engine
         oil if required.</li>
 </ol>
