--- a/html/Lubrication/12 Month.html
+++ b/html/Lubrication/12 Month.html
@@ -8,6 +8,14 @@
         associated tab pivots.</li>
 </ol>
 
+<p class="dontBreakAfter"><b>Use MIL-G-18322C Wheel Bearing Grease</b></p>
+
+<ol type="1">
+    <li>Remove tail wheel axle bolt, axle, disassembled tail wheel parts and clean and hand-pack
+        tail wheel bearings.</li>
+    <li>Remove and pack main wheel bearings.</li>
+</ol>
+
 
 <p class="dontBreakAfter"><b>Use General Purpose Oil</b></p>
 <ol type="1">
@@ -23,29 +31,23 @@
 <p class="dontBreakAfter"><b>Use Molybdenum Disulfide High Temperature Grease</b></p>
 <ol type="1">
     <li>*Remove starter/generator and thoroughly clean male and female splines. Lubricate both splines with
-        above lubricant and re-install.</li>
-    <div class="boxCautionMedium">
-        <p class="boxCautionMediumHeader">NOTE</p>
-        <p class="boxCautionMediumText">Re-install starter/generator gently as it is possible to damage the internal
-            starter drive seal causing engine oil to leak through the starter base drain.</p>
-    </div>
-    <li>If aircraft has an air conditioning system with an engine-driven compressor, remove the drive pad
-        assembly from the engine and clean male and female splines. Lubricate both splines with above
-        lubricant and re-install.</li>
-    <div class="boxCautionMedium">
-        <p class="boxCautionMediumHeader">NOTE</p>
-        <p class="boxCautionMediumText">Do not over-torque the drive pad attach bolts or thread damage to the engine
-            case may occur. Apply only 50 inch-pounds of torque to the attach bolts.
-        </p>
-    </div>
-</ol>
+        above lubricant and re-install.
+        <div class="boxCautionMedium">
+            <p class="boxCautionMediumHeader">NOTE</p>
+            <p class="boxCautionMediumText">Re-install starter/generator gently as it is possible to damage the internal
+                starter drive seal causing engine oil to leak through the starter base drain.</p>
+        </div>
+    </li>
 
-<p>*This is not required on engines having wet spline configuration. There are two ways you can determine if
-    your engine is set up for the wet spline starter-generator. The easiest is to check the part number of the
-    starter-generator. If it is p/n 23048-028, 23078-020, 250SG111Q-2-1, or 300SGL153Q-1, then it is a wet spline
-    starter-generator. An alternate way to determine if your engine is set up for the wet spline starter-generator is to
-    inspect the starter-generator drive gear spline. The starter-generator must be removed to accomplish this. If
-    the internal drive gear spline starts at the aft end of the gear, the engine is set up for the dry spline
-    starter-generator. If the internal spline starts approximately 1/2 inch into the bore of the drive gear, the engine
-    is set
-    up for the wet spline starter-generator.</p>
+    <li>If aircraft has an air conditioning system with an engine-driven compressor, and a dry spline drive pad (See 
+        <xref sectionTarget="2.50.40" prependLabel="Section"></xref>), remove the drive pad
+        assembly from the engine and clean male and female splines. Lubricate both splines with above
+        lubricant and re-install.
+        <div class="boxCautionMedium">
+            <p class="boxCautionMediumHeader">NOTE</p>
+            <p class="boxCautionMediumText">Do not over-torque the drive pad attach bolts or thread damage to the engine
+                case may occur. Apply only 50 inch-pounds of torque to the attach bolts.
+            </p>
+        </div>
+    </li>
+</ol>
