--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -31,24 +31,27 @@
   <tr>
     <td class="cellInspectionNumber">EM5</td>
     <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">
+      Inspect all cowling parts for cracks, especially at screw connections and in 
+      the corners of cut-outs.
+    </td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">EM6</td>
+    <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect engine oil scavenge tubes and fuel lines at engine firewalls for signs of
       chafing. (Ref. SL126).</td>
   </tr>
 
   <tr>
-    <td class="cellInspectionNumber">EM6</td>
+    <td class="cellInspectionNumber">EM7</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">
       Check the swivel seals/o-rings on propeller, power, fuel condition/shutoff, FCU override, engine alternate air,
       cockpit heat and auxiliary fuel cables for cracking or deterioration. (Ref. SL404)
     </td>
   </tr>
-  <tr>
-    <td class="cellInspectionNumber">EM7</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Verify that the routing of the flexible Py line does not allow rubbing or chafing on
-      any rotating component or other structure (serial numbers -0001 thru -0555 and -4001 thru -4025).</td>
-  </tr>
+
 
   <tr>
     <td class="cellInspectionNumber">EM101</td>
