--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -29,14 +29,14 @@
     </td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">EM6</td>
+    <td class="cellInspectionNumber">EM5</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect engine oil scavenge tubes and fuel lines at engine firewalls for signs of
       chafing. (Ref. SL126).</td>
   </tr>
 
   <tr>
-    <td class="cellInspectionNumber">EM7</td>
+    <td class="cellInspectionNumber">EM6</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">
       Check the swivel seals/o-rings on propeller, power, fuel condition/shutoff, FCU override, engine alternate air,
@@ -76,6 +76,13 @@
       (Ref. SL173)</td>
   </tr>
   <tr>
+    <td class="cellInspectionNumber">EM105</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">
+      Inspect ITT wires and connectors.
+    </td>
+  </tr>
+  <tr>
     <td class="cellInspectionNumber">EM501</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Remove and inspect P3 filter.</td>
@@ -88,7 +95,7 @@
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM503</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionInterval">(2 Years)</td>
     <td class="cellInspectionText">
       Verify calibration of engine instruments per
       <xref fileTarget="html/Maintenance/Analog Engine Instrument Calibration.html" prependLabel="Section"></xref>
