--- a/html/Inspection/Insp_ELECTRICAL SYSTEM.html
+++ b/html/Inspection/Insp_ELECTRICAL SYSTEM.html
@@ -47,7 +47,7 @@
 
   <tr>
     <td class="cellInspectionNumber">ES103</td>
-    <td class="cellInspectionInterval">(200-300)</td>
+    <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">Inspect and clean the starter generator and brushes per <xref
         fileTarget="html/Maintenance/Starter Generator Brush Inspection.html" prependLabel="Section"></xref>.</td>
   </tr>
