--- a/html/Inspection/Insp_FUEL SYSTEM.html
+++ b/html/Inspection/Insp_FUEL SYSTEM.html
@@ -40,13 +40,7 @@
     </td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">FS102</td>
-    <td class="cellInspectionInterval">(First of 300 or 12 months)</td>
-    <td class="cellInspectionText"> Inspect FCU to fuel nozzle manifold tubing for chafing. (S/N -0001- through -0073).
-    </td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">FS103</td>
+    <td class="cellInspectionNumber">FS201</td>
     <td class="cellInspectionInterval">(---)</td>
     <td class="cellInspectionText">Clean fuel nozzles, check flow and pattern per “Pratt and Whitney Engine Maintenance
       Manual” at the recommended interval.</td>
@@ -63,11 +57,29 @@
   <tr>
     <td class="cellInspectionNumber">FS502</td>
     <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">
+      Check fuel tank quantity system calibration at empty and full.
+    </td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">FS503</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">
+      Check operation of the fuel filter warning system by removing the hose and 
+      attaching a gauged vacuum source to the bottom of the vacuum switch. Apply 
+      decreasing pressure gradually (vacuum). The battery switch should be “ON”, 
+      and someone in the cockpit to tell when the “FUEL FILTER” warning light 
+      goes on. This should occur at 80 (+/- 1) inches of water (vacuum).
+    </td>
+  </tr>  
+  <tr>
+    <td class="cellInspectionNumber">FS504</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect exterior of header tank on lower side for signs of corrosion from within
       tank, and interior of tank for contamination per S/L #148.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">FS503</td>
+    <td class="cellInspectionNumber">FS505</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Remove finger strainers (steel elbow) from fuel tank and clean. Inspect for fuel
       contamination per Service Letter #148 and <xref sectionTarget="2.75.6" prependLabel="Section"></xref>.</td>
