--- a/html/Inspection/Insp_OIL SYSTEM.html
+++ b/html/Inspection/Insp_OIL SYSTEM.html
@@ -20,7 +20,7 @@
     <td class="cellInspectionNumber">OS4</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect for accessory drive drain line oil leaks per Pratt and Whitney Service
-      Bulletins A14458 and 14468 (-67F prior to serial number RZ0090, excluding RZ0079).</td>
+      Bulletins A14458 and 14468 (-67F prior to serial number RZ0090, excluding RZ0079). (Ref SL307)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">OS101</td>
