review corrections and changes

--- a/html/Inspection/Insp_CONTROL SYSTEM.html
+++ b/html/Inspection/Insp_CONTROL SYSTEM.html
@@ -2,7 +2,7 @@
   <tr>
     <td class="cellInspectionNumber">CS1</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check rudder cables for wear at pulley locations and at entrance to fuselage. Check
+    <td class="cellInspectionText">Check rudder cables for wear at pulley locations and at entrance to fuselage (Ref SL77). Check
       to see if cotter pin guard is installed per Service Letter #200.</td>
   </tr>
   <tr>
@@ -30,40 +30,23 @@
   <tr>
     <td class="cellInspectionNumber">CS6</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Read Maintenance Section on Rudder Controls, Elevator Controls, Cockpit Controls, and
-      Trim Tab Controls and perform inspections called out in those sections.</td>
+    <td class="cellInspectionText">Inspect flap torque tube for cracks, proper attachment, bearing condition.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">CS7</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Read Maintenance Section on Gate Box Controls, Spray Lever Controls and perform
-      inspections called out in those sections.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS8</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect aileron torque tube for cracks, proper attachment, bearing condition.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS9</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check all flight controls are free and correct with no chafing, jamming, or binding
       through all possible combinations of control positions.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">CS10</td>
+    <td class="cellInspectionNumber">CS8</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check elevator down spring in control system in aft fuselage for breakage or wear in
       spring ends.</td>
   </tr>
+
   <tr>
-    <td class="cellInspectionNumber">CS11</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Perform rudder control system inspection per Service Letter #77 and Service Letter
-      #317.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS12</td>
+    <td class="cellInspectionNumber">CS9</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText"> Inspect upper and lower aileron torque tubes for cracks, proper attachment,
       lubrication and bearing condition.</td>
@@ -104,6 +87,12 @@
       the elevator control idler. The minimum diameter is 1.0 inch. Replace the idler if wear is excessive. (Aircraft
       s/n 802-0376/-4004 and subs and aircraft modified in accordance with Service Information Letter #802-0090 do not
       have the Friction Damper installed and this inspection does not apply).</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">CS9</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Perform rudder control system inspection per Service Letter
+      #317.</td>
   </tr>
 
 </table>
