--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -33,29 +33,22 @@
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect for corrosion on internal horizontal stabilizer braces per S/L #98.</td>
   </tr>
+
   <tr>
     <td class="cellInspectionNumber">E7</td>
-    <td class="cellInspectionInterval">(100/12 Months)</td>
-    <td class="cellInspectionText">Check the upper rudder hinge and surrounding structure for movement of the upper
-      hinge relative to the rudder, sheared rivets or cracks in the skins, spars, hinge brackets or doublers per Service
-      Letter #247 and Service Letter #331.</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">For float-equipped aircraft prior to serial number -0259: Inspect all tubes and tube clusters in the immediate vicinity of the vertical and
+      horizontal stabilizer, especially the upper diagonal tube (p/n 11029-10) for cracking.  (Ref SL266)
+    </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E8</td>
-    <td class="cellInspectionInterval">(100/12 Months)</td>
-    <td class="cellInspectionText">Inspect all tubes and tube clusters in the immediate vicinity of the vertical and
-      horizontal stabilizer, especially the upper diagonal tube (p/n 11029-10) for cracking (float-equipped aircraft
-      prior to serial number -0259). Repairs to the upper diagonal tube can be performed according to data located in
-      Service Letter #266.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">E9</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Visual inspection of the horizontal stabilizer auxiliary fin forward attachment (S/N
       -0001 through -0178) per Service Letter #232.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">E10</td>
+    <td class="cellInspectionNumber">E9</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check elevator counterweight bolt for security. (Ref SL282)</td>
   </tr>
@@ -73,25 +66,12 @@
     <td class="cellInspectionText">Check torque on all bolts connecting rudder and elevators to fixed surfaces and at
       elevator horn connection to pedestal and push-rod. Torque should be 100 inch-pounds at the nut.</td>
   </tr>
-
   <tr>
-    <td class="cellInspectionNumber">E201</td>
-    <td class="cellInspectionInterval">(earliest of 1000 hours or 12 months)</td>
-    <td class="cellInspectionText">Visual inspection of the horizontal stabilizer auxiliary fin forward attachment (S/N
-      -0179 and subsequent) per Service Letter #232.</td>
-  </tr>
-
-  <tr>
-    <td class="cellInspectionNumber">E202</td>
-    <td class="cellInspectionInterval">(1350)</td>
-    <td class="cellInspectionText">For planes through s/n 802A-0188, replace eyebolts in stabilizer at strut fittings
-      per S/L #129.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">E203</td>
-    <td class="cellInspectionInterval">(5000)</td>
-    <td class="cellInspectionText">For planes s/n 802A-0189 and subs, and those modified IAW SL#129A, replace eyebolts
-      in stabilizer at strut fittings per S/L #129.</td>
+    <td class="cellInspectionNumber">E103</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check the upper rudder hinge and surrounding structure for movement of the upper
+      hinge relative to the rudder, sheared rivets or cracks in the skins, spars, hinge brackets or doublers per Service
+      Letter #247 and Service Letter #331.</td>
   </tr>
 
 
@@ -139,5 +119,11 @@
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Remove gap covers from stabilizers and check torque on bolts attaching stabilizers to
       fuselage. (See <xref sectionTarget="2.45.1" prependLabel="Section"></xref>)</td>
+  </tr>
+
+    <tr>
+    <td class="cellInspectionNumber">E508</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect horizontal stabilizer auxiliary fin forward attachment per Service Letter #232.</td>
   </tr>
 </table>
