--- a/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
+++ b/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
@@ -18,7 +18,7 @@
   <tr>
     <td class="cellInspectionNumber">DE4</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check to see if plumbing on discharge side of pump is safety wired to top of pump.
+    <td class="cellInspectionText">Check to see if plumbing on discharge side of pump is safetied to top of pump.
     </td>
   </tr>
   <tr>
@@ -36,7 +36,7 @@
   <tr>
     <td class="cellInspectionNumber">DE7</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect all quick-couplers to see if coupler arms are safety wired together.</td>
+    <td class="cellInspectionText">Inspect all quick-couplers to see if coupler arms are safetied together.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">DE8</td>
