--- a/html/Inspection/Insp_FIRE GATE GEN II HYDRAULIC SYSTEM.html
+++ b/html/Inspection/Insp_FIRE GATE GEN II HYDRAULIC SYSTEM.html
@@ -22,6 +22,6 @@
   <tr>
     <td class="cellInspectionNumber">FRDS505</td>
     <td class="cellInspectionInterval">(3-5 Years)</td>
-    <td class="cellInspectionText">Replace hydraulic oil. (See Section 2-HYDRAULICS).</td>
+    <td class="cellInspectionText">Replace hydraulic oil.</td>
   </tr>
 </table>
