--- a/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
+++ b/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
@@ -8,7 +8,7 @@
     <td class="cellInspectionNumber">AC2</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect the rear air conditioner duct to ensure that it is properly installed,
-      secured and cannot rotate in such a way to obstruct rudder travel (2-seat aircraft only).</td>
+      secured and cannot rotate in such a way to obstruct rudder travel (2-seat aircraft only). (Ref SL309)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">AC3</td>
